--- a/my-angular-project/src/app/user/user.component.html
+++ b/my-angular-project/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
-    <button>
-        <img [src]="'assets/users/' + user.avatar" [alt]="user.name">
-        <span>{{user.name}}</span>
+    <button (click)="onSelected()">
+        <img [src]="imagePath" [alt]="name" />
+        <span>{{ name }}</span>
     </button>
 </div>
