--- a/my-angular-project/src/app/user/user.component.html
+++ b/my-angular-project/src/app/user/user.component.html
@@ -1,6 +1,6 @@
-<div>
-    <button (click)="onSelected()">
-        <img [src]="imagePath" [alt]="name" />
-        <span>{{ name }}</span>
-    </button>
-</div>
+<app-card>
+  <button [class.active]="isSelected" (click)="onSelected()">
+    <img [src]="imagePath" [alt]="user.name" />
+    <span>{{ user.name }}</span>
+  </button>
+</app-card>
