--- a/my-angular-project/src/app/tasks/tasks.component.html
+++ b/my-angular-project/src/app/tasks/tasks.component.html
@@ -1,8 +1,5 @@
 @if (isAddingTask) {
-<app-new-task
-  (cancel)="onCancelAddTask()"
-  (addTask)="onAddTask($event)"
-></app-new-task>
+<app-new-task [userId]="userId" (close)="onCloseAddTask()"></app-new-task>
 
 }
 <section id="tasks">
@@ -15,7 +12,7 @@
   <ul>
     @for (task of selectedUserTasks; track task.id) {
     <li>
-      <app-task [task]="task" (complete)="onCompleteTask($event)"></app-task>
+      <app-task [task]="task"></app-task>
     </li>
     }
   </ul>
